--- a/Front/reservas-frontend/index.html
+++ b/Front/reservas-frontend/index.html
@@ -2,12 +2,19 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Sistema de Gestión de Farmacia" />
+    <meta
+      name="description"
+      content="Sistema de Gestión de Farmacia"
+    />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
     <title>Farmacia - Sistema de Reservas</title>
   </head>
   <body>
+    <noscript>Necesitas habilitar JavaScript para usar esta aplicación.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/Main.tsx"></script>
   </body>
