--- a/Front/reservas-frontend/public/index.html
+++ b/Front/reservas-frontend/public/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="/Logofarmacia.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Sistema de Gestión de Farmacia" />
@@ -10,5 +11,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/Main.tsx"></script>
+    
   </body>
 </html>
